[package]
name = "mars_raw_utils"
version = "0.5.2"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2018"
description = "Utilities for working with publicly available raw MSL, Mars2020, and InSight images"
repository = "https://github.com/kmgill/mars-raw-utils"
readme = "README.md"
keywords = ["mars", "msl", "mars2020", "insight"]
license = "MIT" 
exclude = ["mars-raw-utils-data"]

[package.metadata.deb]
maintainer = "Kevin M. Gill <apoapsys@gmail.com>"
copyright = "2022, Kevin M. Gill <apoapsys@gmail.com>"
license-file = ["LICENSE", "2"]
extended-description = "Utilities for working with publicly available raw MSL, Mars2020, and InSight images" 
depends = "$auto"
section = "science"
priority = "optional"
assets = [
    ["target/release/mru", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mars_raw_utils/README", "644"],
    ["mars-raw-utils-data/caldata/*png", "usr/share/mars_raw_utils/data/", "644"],
    ["mars-raw-utils-data/caldata/*jpg", "usr/share/mars_raw_utils/data/", "644"],
    ["mars-raw-utils-data/caldata/*.toml", "usr/share/mars_raw_utils/data/", "644"],
]

[lib]
name = "mars_raw_utils"

[[bin]]
name = "mru"
path = "bin/mru.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[features]

[dependencies]
proc-macro2 = "1.0.28"
image = "0.24.1"
clap = { version = "3.1.18", features = ["derive"] }
serde_json = "1.0.64"
const_format = "0.2.14"
reqwest = { version = "0.11.2", features = ["blocking"] }
platforms = "3.0.0"
lab = "0.11.0"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
string-builder = "0.2.0"
sciimg = "0.3.2"
#sciimg = { path = "../sciimg" }
weezl = "0.1.5"
gif = "0.11.3"
rayon = "1.5.1"
chrono = "0.4.19"
dirs = "4.0.0"
wild = "2.0.4"
colored = "2.0.0"
backtrace = "0.3.65"
termsize = "0.1.6"
lazy_static = "1.4.0"

[package.metadata.rpm]
package = "mars_raw_utils"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
mru = { path = "/usr/bin/mru" }

[package.metadata.rpm.files]
"M20_MCZ_LEFT_INPAINT_MASK_V1.png" = { path =  "/usr/share/mars_raw_utils/data/M20_MCZ_LEFT_INPAINT_MASK_V1.png", mode = "644"}
"M20_MCZ_RIGHT_INPAINT_MASK_V1.png" = { path =  "/usr/share/mars_raw_utils/data/M20_MCZ_RIGHT_INPAINT_MASK_V1.png", mode = "644"}
"M20_SCAM_FLAT_RGB_Sol77_V2.png" = { path =  "/usr/share/mars_raw_utils/data/M20_SCAM_FLAT_RGB_Sol77_V2.png", mode = "644"}
"M20_SCAM_MASK_Sol1_V1.png" = { path =  "/usr/share/mars_raw_utils/data/M20_SCAM_MASK_Sol1_V1.png", mode = "644"}
"M20_WATSON_FLAT_V0.png" = { path =  "/usr/share/mars_raw_utils/data/M20_WATSON_FLAT_V0.png", mode = "644"}
"M20_WATSON_INPAINT_MASK_V1.png" = { path =  "/usr/share/mars_raw_utils/data/M20_WATSON_INPAINT_MASK_V1.png", mode = "644"}
"M20_FLAT_SN_5001.jpg" = { path =  "/usr/share/mars_raw_utils/data/M20_FLAT_SN_5001.jpg", mode = "644"}
"meda_rad_flat_padded.jpg" = { path =  "/usr/share/mars_raw_utils/data/meda_rad_flat_padded.jpg", mode = "644"}
"M20_HELI_NAV_FLAT_Sol76_V1.jpg" = { path =  "/usr/share/mars_raw_utils/data/M20_HELI_NAV_FLAT_Sol76_V1.jpg", mode = "644"}
"M20_HELI_RTE_FLAT_V3.png" = { path =  "/usr/share/mars_raw_utils/data/M20_HELI_RTE_FLAT_V3.png", mode = "644"}
"MSL_FLB_FLAT_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_FLB_FLAT_V1.png", mode = "644"}
"MSL_FRB_FLAT_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_FRB_FLAT_V1.png", mode = "644"}
"MSL_MAHLI_FLAT_Sol2904_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_MAHLI_FLAT_Sol2904_V1.png", mode = "644"}
"MSL_MAHLI_INPAINT_Sol2904_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_MAHLI_INPAINT_Sol2904_V1.png", mode = "644"}
"MSL_MCAM_LEFT_INPAINT_Sol3082_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_MCAM_LEFT_INPAINT_Sol3082_V1.png", mode = "644"}
"MSL_NLB_FLAT_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_NLB_FLAT_V1.png", mode = "644"}
"MSL_NRB_FLAT_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_NRB_FLAT_V1.png", mode = "644"}
"MSL_NRB_INPAINT_Sol3052_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_NRB_INPAINT_Sol3052_V1.png", mode = "644"}
"MSL_RLB_FLAT_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_RLB_FLAT_V1.png", mode = "644"}
"MSL_RRB_FLAT_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_RRB_FLAT_V1.png", mode = "644"}
"MSL_CCAM_MASK_Sol3122_V2.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_CCAM_MASK_Sol3122_V2.png", mode = "644"}
"MSL_CCAM_FLAT_Sol32_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_CCAM_FLAT_Sol32_V1.png", mode = "644"}
"M20_WATSON_PREFLIGHT_FLAT_RGB_FOCUS_11958_V1.jpg" = { path =  "/usr/share/mars_raw_utils/data/M20_WATSON_PREFLIGHT_FLAT_RGB_FOCUS_11958_V1.jpg", mode = "644"}
"MSL_MCAM_RIGHT_INPAINT_Sol3101_V1.png" = { path =  "/usr/share/mars_raw_utils/data/MSL_MCAM_RIGHT_INPAINT_Sol3101_V1.png", mode = "644"}
"FLAT_ML_filter0_0-rjcal.jpg" = { path =  "/usr/share/mars_raw_utils/data/FLAT_ML_filter0_0-rjcal.jpg", mode = "644"}
"FLAT_MR_filter0_0-rjcal.jpg" = { path =  "/usr/share/mars_raw_utils/data/FLAT_MR_filter0_0-rjcal.jpg", mode = "644"}
"FLAT_MD_0_RGB_V1.jpg" = { path =  "/usr/share/mars_raw_utils/data/FLAT_MD_0_RGB_V1.jpg", mode = "644"}
"NSYT_FLAT_SN_0203.jpg" = { path =  "/usr/share/mars_raw_utils/data/NSYT_FLAT_SN_0203.jpg", mode = "644"}
"NSYT_FLAT_SN_0210.jpg" = { path =  "/usr/share/mars_raw_utils/data/NSYT_FLAT_SN_0210.jpg", mode = "644"}
"caldata.toml" = { path =  "/usr/share/mars_raw_utils/data/caldata.toml", mode = "644"}
"msl_mcam_bay.toml" = { path =  "/usr/share/mars_raw_utils/data/msl_mcam_bay.toml", mode = "644"}
"msl_mcam_ilt.toml" = { path =  "/usr/share/mars_raw_utils/data/msl_mcam_ilt.toml", mode = "644"}
"msl_mcam_rad.toml" = { path =  "/usr/share/mars_raw_utils/data/msl_mcam_rad.toml", mode = "644"}
"msl_mahli_bay.toml" = { path =  "/usr/share/mars_raw_utils/data/msl_mahli_bay.toml", mode = "644"}
"msl_mahli_ilt.toml" = { path =  "/usr/share/mars_raw_utils/data/msl_mahli_ilt.toml", mode = "644"}
"msl_mahli_rad.toml" = { path =  "/usr/share/mars_raw_utils/data/msl_mahli_rad.toml", mode = "644"}
"msl_mahli_cwb.toml" = { path =  "/usr/share/mars_raw_utils/data/msl_mahli_cwb.toml", mode = "644"}
"m20_watson_bay.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_watson_bay.toml", mode = "644"}
"m20_watson_ilt.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_watson_ilt.toml", mode = "644"}
"m20_watson_rad.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_watson_rad.toml", mode = "644"}
"m20_zcam_bay.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_zcam_bay.toml", mode = "644"}
"m20_zcam_ilt.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_zcam_ilt.toml", mode = "644"}
"m20_zcam_rad.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_zcam_rad.toml", mode = "644"}
"m20_zcam_cwb.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_zcam_cwb.toml", mode = "644"}
"m20_zcam_cb2.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_zcam_cb2.toml", mode = "644"}
"m20_hrte_rad.toml" = { path =  "/usr/share/mars_raw_utils/data/m20_hrte_rad.toml", mode = "644"}
"L0_-motorcount-_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_-motorcount-_cont_v1.jpg", mode = "644"}
"L0_0000_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_0000_cont_v1.jpg", mode = "644"}
"L0_2448_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_2448_cont_v1.jpg", mode = "644"}
"L0_3834_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_3834_cont_v1.jpg", mode = "644"}
"L0_5196_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_5194_cont_v1.jpg", mode = "644"}
"L0_6720_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_6720_cont_v1.jpg", mode = "644"}
"L0_8652_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_8652_cont_v1.jpg", mode = "644"}
"L0_9600_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/L0_9600_cont_v1.jpg", mode = "644"}
"R0_-motorcount-_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_-motorcount-_cont_v1.jpg", mode = "644"}
"R0_0000_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_0000_cont_v1.jpg", mode = "644"}
"R0_2448_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_2448_cont_v1.jpg", mode = "644"}
"R0_3834_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_3834_cont_v1.jpg", mode = "644"}
"R0_5196_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_5194_cont_v1.jpg", mode = "644"}
"R0_6720_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_6720_cont_v1.jpg", mode = "644"}
"R0_8652_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_8652_cont_v1.jpg", mode = "644"}
"R0_9600_cont_v1.jpg" = { path = "/usr/share/mars_raw_utils/data/R0_9600_cont_v1.jpg", mode = "644"}

